added some more comments to help with layout, did a bit of css on the header

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     </header>
     <aside>
         <!--search bar for cities-->
+        <h2>Search for a City:</h2>
         <input type="text" class="search">
-        <button>Search</button>
+        <button class="searchBtn">Search</button>
         <!-- and that city is added to the search history -->
         <!-- WHEN I click on a city in the search history
         THEN I am again presented with current and future conditions for that city -->
+        <div class = "storedSearches">
+            <!--this is where the stored searches will go from localStorage-->
+        </div>
         
     </aside>
     <main>
