added color change for uv index

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
             
         </aside>
         <section>
-        
-            <!--presented with current and future conditions for that city -->
-            <!--presented with the city name, the date, an icon representation of weather conditions, the temperature, the humidity, the wind speed, and the UV index-->
+            <!--displays current conditions for searched city-->
             <h1 class="name"></h1>
             <span class="weather"></span>
             <img class="weatherIcon">
@@ -41,7 +39,7 @@
             <span class="temp"></span>
             <span class="humidity"></span>
             <span class="wind"></span>
-            <span class="uviIndex"></span>
+            <span class="uvIndex"></span>
             <!--I view the UV index-->
             <!--THEN I am presented with a color that indicates whether the conditions are favorable, moderate, or severe, maybe green, red, and yellow-->
         </section>
