--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href = "style.css">
     <title>Weather or Not</title>
@@ -14,25 +15,24 @@
         <p id="headerP">The best weather application for deciding "Weather or Not" to plan any trip or event.</p>
     </header>
     
-    <aside>
-        <!--search bar for cities-->
+    <aside class="col-2">
         <h2>Search for a City:</h2>
-        <input type="text" class="search">
-        <button class="searchBtn">Search</button>
-        <!-- and that city is added to the search history -->
-        <!-- WHEN I click on a city in the search history
-        THEN I am again presented with current and future conditions for that city -->
+        <!--search bar for cities-->
+        <div class="input-group mb-3">
+            <textarea type="text" class="search form-control" placeholder="" aria-label="" aria-describedby="basic-addon1"></textarea>
+            <div class="input-group-prepend">
+                <button class="btn btn-outline-secondary searchBtn" type="button"><i class="fas fa-search"></i></button>
+            </div>
+        </div>
+        <!--displays stored searches-->
         <div>
-            <!--this is where the stored searches will go from localStorage-->
-            <ul class = "storedSearches">
-
-            </ul>
+            <div id="storedSearches" class="col-5 list-group"></div>
         </div>
         
     </aside>
-    <main class = "row">
+    <main class = "hidden row">
+        <!--displays current conditions for searched city-->
         <section class = "currentWeather row-2 col-10">
-            <!--displays current conditions for searched city-->
             <div class="card border-dark mb-3 col-12" style="max-width: 18rem;">
                 <div class="name card-header"></div>
                 <div class="forecast card-body text-dark">
@@ -46,8 +46,8 @@
                 </div>
             </div>
         </section>
-
-        <section class ="row">
+        <!--displays forecast for 5 days-->
+        <section class ="row col-10">
             <div class="card border-dark mb-3" style="max-width: 18rem;">
                 <div class="card-body text-dark">
                 <h3 id="dateOne" class="card-title"></h3>
@@ -90,7 +90,6 @@
             </div>
         </section>
     </main>
-    <!--uses localStorage to store presistant data-->
     <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
